# si_proyecto_u3

./: README.md  Specifications.md  main.py  pyproject.toml
notebooks/: notebook1.ipynb  notebook_with_gpu_supp.ipynb
