[project]
name = "si-proyecto-u3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikeras>=0.13.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda,with-cuda]>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.13",
]
